--- a/app/localization/locales/fa.json
+++ b/app/localization/locales/fa.json
@@ -951,6 +951,7 @@
     "CHANGE_DEVICES_TITLE": "📱 تغییر تعداد دستگاه",
     "CHANGE_TARIFF_BUTTON": "📦 تعرفه",
     "CHANNEL_CHECK_BUTTON": "✅ عضو شدم",
+    "CHANNEL_CHECK_NOT_SUBSCRIBED": "شما هنوز در همه کانال‌ها عضو نشده‌اید! لطفاً عضو شوید و دوباره امتحان کنید.",
     "CHANNEL_REQUIRED_TEXT": "لطفاً در کانال‌های اجباری عضو شوید و سپس دکمه زیر را فشار دهید.",
     "CHANNEL_SUBSCRIBE_BUTTON": "📢 عضویت در کانال",
     "CHANNEL_SUBSCRIBE_REQUIRED_ALERT": "لطفاً ابتدا در همه کانال‌های اجباری عضو شوید!",
