--- a/app/localization/locales/ru.json
+++ b/app/localization/locales/ru.json
@@ -951,6 +951,7 @@
   "CHANGE_DEVICES_TITLE": "📱 Изменение количества устройств",
   "CHANGE_TARIFF_BUTTON": "📦 Тариф",
   "CHANNEL_CHECK_BUTTON": "✅ Я подписался",
+  "CHANNEL_CHECK_NOT_SUBSCRIBED": "Вы ещё не подписались на все каналы! Подпишитесь и попробуйте снова.",
   "CHANNEL_REQUIRED_TEXT": "Пожалуйста, подпишитесь на обязательные каналы и нажмите кнопку ниже.",
   "CHANNEL_SUBSCRIBE_BUTTON": "🔗 Подписаться",
   "CHANNEL_SUBSCRIBE_REQUIRED_ALERT": "Пожалуйста, подпишитесь на все обязательные каналы!",
