fix: translate required channels handler to Russian, add localization keys
- All bot handler strings translated from English to Russian
- Back button now correctly navigates to admin_submenu_settings
- Added ADMIN_SETTINGS_REQUIRED_CHANNELS key to all 5 locales

--- a/app/localization/locales/en.json
+++ b/app/localization/locales/en.json
@@ -663,6 +663,7 @@
   "ADMIN_SETTINGS_MAINTENANCE": "🔧 Maintenance",
   "ADMIN_SETTINGS_PRIVACY_POLICY": "🛡️ Privacy policy",
   "ADMIN_SETTINGS_PUBLIC_OFFER": "📄 Public offer",
+  "ADMIN_SETTINGS_REQUIRED_CHANNELS": "📢 Required channels",
   "ADMIN_SETTINGS_SUBMENU_DESCRIPTION": "Manage Remnawave, monitoring and other settings:",
   "ADMIN_SETTINGS_SUBMENU_TITLE": "⚙️ **System settings**\n\n",
   "ADMIN_SQUAD_ADD_ALL": "👥 Add all users",
