--- a/app/localization/locales/fa.json
+++ b/app/localization/locales/fa.json
@@ -666,6 +666,7 @@
     "ADMIN_SETTINGS_MAINTENANCE": "🔧 تعمیرات",
     "ADMIN_SETTINGS_PRIVACY_POLICY": "🛡️ حریم خصوصی",
     "ADMIN_SETTINGS_PUBLIC_OFFER": "📄 شرایط استفاده",
+    "ADMIN_SETTINGS_REQUIRED_CHANNELS": "📢 کانال‌های اجباری",
     "ADMIN_SETTINGS_SUBMENU_DESCRIPTION": "مدیریت Remnawave، مانیتورینگ و تنظیمات:",
     "ADMIN_SETTINGS_SUBMENU_TITLE": "⚙️ **تنظیمات سیستم**",
     "ADMIN_SETTINGS_TARIFFS": "📦 تعرفه‌ها",
