--- a/app/localization/locales/ua.json
+++ b/app/localization/locales/ua.json
@@ -593,6 +593,7 @@
  "ADMIN_SETTINGS_MAINTENANCE": "🔧 Техроботи",
  "ADMIN_SETTINGS_PRIVACY_POLICY": "🛡️ Політика конф.",
  "ADMIN_SETTINGS_PUBLIC_OFFER": "📄 Публічна оферта",
+ "ADMIN_SETTINGS_REQUIRED_CHANNELS": "📢 Обов'язкові канали",
  "ADMIN_SETTINGS_SUBMENU_DESCRIPTION": "Керування Remnawave, моніторингом та іншими налаштуваннями:",
  "ADMIN_SETTINGS_SUBMENU_TITLE": "⚙️ **Налаштування системи**\n\n",
  "ADMIN_SQUAD_ADD_ALL": "👥 Додати всіх користувачів",
