--- a/app/localization/locales/zh.json
+++ b/app/localization/locales/zh.json
@@ -592,6 +592,7 @@
 "ADMIN_SETTINGS_MAINTENANCE":"🔧维护",
 "ADMIN_SETTINGS_PRIVACY_POLICY":"🛡️隐私政策",
 "ADMIN_SETTINGS_PUBLIC_OFFER":"📄公开服务条款",
+"ADMIN_SETTINGS_REQUIRED_CHANNELS":"📢必订频道",
 "ADMIN_SETTINGS_SUBMENU_DESCRIPTION":"管理Remnawave、监控和其他设置：",
 "ADMIN_SETTINGS_SUBMENU_TITLE":"⚙️**系统设置**\n\n",
 "ADMIN_SQUAD_ADD_ALL":"👥添加所有用户",
