--- a/app/localization/locales/ru.json
+++ b/app/localization/locales/ru.json
@@ -666,6 +666,7 @@
   "ADMIN_SETTINGS_MAINTENANCE": "🔧 Техработы",
   "ADMIN_SETTINGS_PRIVACY_POLICY": "🛡️ Политика конф.",
   "ADMIN_SETTINGS_PUBLIC_OFFER": "📄 Публичная оферта",
+  "ADMIN_SETTINGS_REQUIRED_CHANNELS": "📢 Обязательные каналы",
   "ADMIN_SETTINGS_SUBMENU_DESCRIPTION": "Управление Remnawave, мониторингом и другими настройками:",
   "ADMIN_SETTINGS_SUBMENU_TITLE": "⚙️ **Настройки системы**\n\n",
   "ADMIN_SETTINGS_TARIFFS": "📦 Тарифы",
